# chemfiles.rs

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  deploy-docs.sh  index.html  rustfmt.toml
.github/workflows/: docs.yml  rustfmt.yml  tests.yml
0.10.0/: index.html  search-index.js  settings.html
0.10.0/chemfiles/: all.html  enum.BondOrder.html  enum.CellShape.html  enum.Property.html  fn.add_configuration.html  fn.formats_list.html  fn.version.html  index.html  sidebar-items.js  struct.Atom.html  struct.Error.html  struct.FormatMetadata.html  struct.PropertiesIter.html  struct.Residue.html  struct.ResidueRef.html  struct.Selection.html  struct.Topology.html  struct.TopologyRef.html  struct.Trajectory.html  struct.UnitCellMut.html
0.10.1/: search-index.js  settings.html
0.10.1/chemfiles/: all.html  enum.BondOrder.html  enum.CellShape.html  enum.Property.html  enum.Status.html  fn.add_configuration.html  fn.formats_list.html  fn.guess_format.html  fn.set_warning_callback.html  fn.version.html  index.html  sidebar-items.js  struct.Atom.html  struct.AtomMut.html  struct.AtomRef.html  struct.Error.html  struct.FormatMetadata.html  struct.Frame.html  struct.Match.html  struct.PropertiesIter.html  struct.Residue.html  struct.ResidueRef.html  struct.Selection.html  struct.Topology.html  struct.TopologyRef.html  struct.Trajectory.html  struct.UnitCell.html  struct.UnitCellMut.html  struct.UnitCellRef.html
0.10.2/: settings.html
0.10.2/chemfiles/: enum.BondOrder.html  enum.CellShape.html  fn.guess_format.html  struct.Atom.html  struct.Frame.html  struct.Match.html  struct.Residue.html  struct.TopologyRef.html  struct.UnitCellMut.html
0.10.2/doc/: search-index.js  source-files.js
0.10.3/: search-index.js  settings.html  source-files.js
0.10.3/chemfiles/: all.html  enum.BondOrder.html  enum.CellShape.html  enum.Property.html  enum.Status.html  fn.add_configuration.html  fn.formats_list.html  fn.guess_format.html  fn.set_warning_callback.html  fn.version.html  index.html  sidebar-items.js  struct.Atom.html  struct.AtomMut.html  struct.AtomRef.html  struct.Error.html  struct.FormatMetadata.html  struct.Frame.html  struct.Match.html  struct.PropertiesIter.html  struct.Residue.html  struct.ResidueRef.html  struct.Selection.html  struct.Topology.html  struct.TopologyRef.html  struct.Trajectory.html  struct.UnitCell.html  struct.UnitCellMut.html  struct.UnitCellRef.html
0.10.4/: help.html  search-index.js  settings.html  source-files.js
0.10.4/chemfiles/: all.html  enum.BondOrder.html  enum.CellShape.html  enum.Property.html  enum.Status.html  fn.add_configuration.html  fn.formats_list.html  fn.guess_format.html  fn.set_warning_callback.html  fn.version.html  index.html  struct.Atom.html  struct.AtomMut.html  struct.AtomRef.html  struct.Error.html  struct.FormatMetadata.html  struct.Frame.html  struct.Match.html  struct.MemoryTrajectoryReader.html  struct.PropertiesIter.html  struct.Residue.html  struct.ResidueRef.html  struct.Selection.html  struct.Topology.html  struct.TopologyRef.html  struct.Trajectory.html  struct.UnitCell.html  struct.UnitCellMut.html  struct.UnitCellRef.html
0.10.40/: help.html  search-index.js  settings.html
0.10.40/chemfiles/: all.html  enum.BondOrder.html  enum.CellShape.html  enum.Property.html  enum.Status.html  fn.add_configuration.html  fn.formats_list.html  fn.guess_format.html  fn.set_warning_callback.html  fn.version.html  index.html  struct.Atom.html  struct.AtomMut.html  struct.AtomRef.html  struct.Error.html  struct.FormatMetadata.html  struct.Frame.html  struct.Match.html  struct.MemoryTrajectoryReader.html  struct.PropertiesIter.html  struct.Residue.html  struct.ResidueRef.html  struct.Selection.html  struct.Topology.html  struct.TopologyRef.html  struct.Trajectory.html  struct.UnitCell.html  struct.UnitCellMut.html  struct.UnitCellRef.html
0.10.41/: search-index.js
0.10.41/chemfiles/: enum.BondOrder.html  enum.CellShape.html  enum.Property.html  fn.formats_list.html  fn.guess_format.html  index.html  sidebar-items.js  struct.Atom.html  struct.AtomMut.html  struct.AtomRef.html  struct.Error.html  struct.Frame.html  struct.Match.html  struct.MemoryTrajectoryReader.html  struct.ResidueRef.html  struct.Topology.html  struct.Trajectory.html  struct.UnitCell.html  struct.UnitCellMut.html
0.4.0/: search-index.js
0.4.0/chemfiles/: enum.AtomType.html  enum.CellType.html  enum.Error.html  enum.ErrorKind.html  enum.LogLevel.html  fn.version.html  index.html  sidebar-items.js  struct.Atom.html  struct.Error.html  struct.Frame.html  struct.Logger.html  struct.Match.html  struct.Selection.html  struct.Topology.html  struct.Trajectory.html  struct.UnitCell.html  type.Result.html
0.4.0/chemfiles_sys/: constant.CHFL_ATOM_COARSE_GRAINED.html  constant.CHFL_ATOM_DUMMY.html  constant.CHFL_ATOM_ELEMENT.html  constant.CHFL_ATOM_UNDEFINED.html  constant.CHFL_CELL_INFINITE.html  constant.CHFL_CELL_ORTHORHOMBIC.html  constant.CHFL_CELL_TRICLINIC.html  constant.CHFL_CXX_ERROR.html  constant.CHFL_FILE_ERROR.html  constant.CHFL_FORMAT_ERROR.html  constant.CHFL_GENERIC_ERROR.html  (+127 more)
0.5.0/: search-index.js
0.8.0/: search-index.js
0.9.0/: source-files.js
0.9.1/: aliases.js  search-index.js
0.9.3/: search-index.js  settings.html  source-files.js
chemfiles-sys/: CMakeLists.txt  Cargo.toml  build.rs  lib.rs  prebuilt.rs
chemfiles-sys-tests/: Cargo.toml  build.rs  main.rs
chemfiles-sys-tests/chemfiles/: config.h  exports.h  exports.hpp
chemfiles-sys/tests/: ctest.rs
chemharp-sys/: CMakeLists.txt  Cargo.toml  build.rs  lib.rs
data/: helium.xyz.but.not.really
examples/: convert.rs  generate.rs  indexes.rs  rmsd.rs  select.rs
latest/: crates.js  help.html  settings.html  source-files.js  src-files.js
scripts/: build-docs.sh  check-binding.py  check-used-functions.py  deploy-docs.sh
src/: atom.rs  cell.rs  errors.rs  ffi.rs  frame.rs  lib.rs  logging.rs  metadata.rs  misc.rs  property.rs  residue.rs  selection.rs  string.rs  strings.rs  testing.rs  tests.rs  topology.rs  trajectory.rs
(+864 files in other folders)
