[package]
name = "chemfiles"
version = "0.10.1"
authors = ["Guillaume Fraux <guillaume.fraux@chimie-paristech.fr>"]
documentation = "http://chemfiles.org/chemfiles.rs/"
repository = "https://github.com/chemfiles/chemfiles.rs"
homepage = "http://chemfiles.org/"
description = "Modern library for chemistry trajectories reading and writing"
keywords = ["computational", "theoretical", "chemistry", "file", "trajectory"]
readme = "README.md"
license = "BSD-3-Clause"
exclude = ["data/*"]

[lib]
name = "chemfiles"

[dependencies]
chemfiles-sys = {path = "chemfiles-sys", version = "0.10.1"}
libc = "0.2"

[dev-dependencies]
approx = "0.4"

[workspace]
members = [
    "chemfiles-sys",
    "chemfiles-sys-tests"
]
