[package]
name = "chemfiles"
version = "0.10.41"
edition = "2021"
authors = ["Guillaume Fraux <guillaume.fraux@epfl.ch>"]
documentation = "http://chemfiles.org/chemfiles.rs/"
repository = "https://github.com/chemfiles/chemfiles.rs"
homepage = "http://chemfiles.org/"
description = "Modern library for chemistry trajectories reading and writing"
keywords = ["computational", "theoretical", "chemistry", "file", "trajectory"]
readme = "README.md"
license = "BSD-3-Clause"
exclude = ["data/*"]

[lib]
name = "chemfiles"

[dependencies]
chemfiles-sys = {path = "chemfiles-sys", version = "0.10.41"}

[dev-dependencies]
approx = "0.5"

[features]
# force a build from sources even if there is a matching pre-built version
# available
build-from-sources = ["chemfiles-sys/build-from-sources"]

[workspace]
members = [
    "chemfiles-sys",
    "chemfiles-sys-tests"
]
