[package]
name = "chemfiles-sys-tests"
version = "0.0.0"
edition = "2021"
authors = ["Guillaume Fraux <guillaume@fraux.fr>"]
repository = "https://github.com/chemfiles/chemfiles.rs"
publish = false

[[bin]]
name = "chemfiles-sys-tests"
path = "main.rs"
doctest = false

[dependencies]
libc = "0.2"
chemfiles-sys = {path = "../chemfiles-sys"}

[build-dependencies]
ctest2 = "0.4"
