[package]
name = "chemfiles-sys"
version = "0.8.0"
authors = ["Guillaume Fraux <guillaume.fraux@ens.fr>"]
links = "chemfiles"
repository = "https://github.com/chemfiles/chemfiles.rs"
license = "MPL-2.0"
description = "Rust FFI declaration for the chemfiles library"

[lib]
name = "chemfiles_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
