[package]
name = "chemfiles-sys"
version = "0.10.2"
authors = ["Guillaume Fraux <guillaume.fraux@ens.fr>"]
links = "chemfiles"
repository = "https://github.com/chemfiles/chemfiles.rs"
license = "BSD-3-Clause"
description = "Rust FFI declaration for the chemfiles library"
exclude = ["chemfiles/tests/**"]

[lib]
name = "chemfiles_sys"
path = "lib.rs"
test = false
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
