[package]
name = "chemfiles-sys"
version = "0.10.3"
edition = "2021"
authors = ["Guillaume Fraux <guillaume.fraux@epfl.ch>"]
links = "chemfiles"
repository = "https://github.com/chemfiles/chemfiles.rs"
license = "BSD-3-Clause"
description = "Rust FFI declaration for the chemfiles library"
exclude = ["chemfiles/tests/**"]

[lib]
name = "chemfiles_sys"
path = "lib.rs"
test = false
doctest = false

[features]
# force a build from sources even if there is a matching pre-built version
# available
build-from-sources = []

[dependencies]

[build-dependencies]
cmake = "0.1"
