[package]
name = "chemharp-sys"
version = "0.4.0-dev"
authors = ["Guillaume Fraux <guillaume.fraux@ens.fr>"]
links = "chemharp"
build = "build.rs"
repository = "https://github.com/Luthaf/Chemharp.rs"
license = "MPL-2.0"
description = "Native bindings to the chemharp library"

[lib]
name = "chemharp_sys"
path = "lib.rs"

[dependencies]
libc = "*"

[build-dependencies]
cmake = "*"
